--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1",
-    "markdown-it": "^12.2.0"
+    "inquirer": "^6.3.1"
   }
 }
